Fix some alignment issues for booklist and search

--- a/react_nanodegree/my_reads/src/component/Book/Book.css
+++ b/react_nanodegree/my_reads/src/component/Book/Book.css
@@ -1,5 +1,3 @@
-/* books */
-
 .book {
   margin: 0 25px 25px 0;
 }
@@ -51,4 +49,5 @@
   background: #eee;
   width: 128px;
   height: 193px;
+  margin: 10px 10px 15px 10px;
 }
