--- a/react_nanodegree/my_reads/src/component/BookSearch/book-search.css
+++ b/react_nanodegree/my_reads/src/component/BookSearch/book-search.css
@@ -15,13 +15,13 @@
 }
 
 .book-search {
-  padding: 25px 0 0 0;
+  padding: 25px 50px 0 0;
   margin: auto;
   width: 95%;
 }
 
 .book-search-message {
-  padding: 10px 0 40px 0;
+  padding: 10px 50px 40px 0;
   margin: auto;
   width: 95%;
 }
