--- a/react_nanodegree/my_reads/src/component/Shelf/shelf.css
+++ b/react_nanodegree/my_reads/src/component/Shelf/shelf.css
@@ -1,4 +1,5 @@
 .shelf {
+  padding: 0 0 0 10px;
   margin: auto;
   width: 95%;
 }
